# daydream

./: Cargo.toml
src/: error.rs  lib.rs  macros.rs  main.rs
src/app/: board.rs  message.rs  mod.rs  state.rs  view_state.rs
src/repr/: common.rs  day.rs  diff.rs  entry.rs  mod.rs  resource.rs  rule.rs  sticker.rs  storage.rs
